PruebaHTML-CSS Semana4

--- a/Noticias.html
+++ b/Noticias.html
@@ -22,23 +22,53 @@
  	</head>
  	<!-- Body -->
  	<body>
- 		<!-- Principal Container -->
- 		<div class="container">
- 			<!-- Section1: Navbar and Banner -->
-	 		<div class="container section1">
-	 			<!-- Section1: Navbar -->
-	 			<!-- Section1: Banner -->
-	 		</div>
-	 		<!-- Section2: News -->
-	 		<div class="container section2">
-	 			<!-- Section2: News -->
-	 		</div>
-	 		<!-- Section3: Footer -->
-	 		<div class="container section3">
-	 			<!-- Section3: Contact -->
-	 			<!-- Section3: Map -->
-	 			<!-- Section3: Form -->
-	 		</div>
-	 	</div>
+ 		<!-- Section1: Navbar -->
+ 		<div class="container section1">
+ 			<!-- Navbar -->
+ 			<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+				<div class="container-fluid">
+				    <!-- navbar bootstrap header -->
+				    <div class="navbar-header">
+				      	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				        	<span class="sr-only">Toggle navigation</span>
+				        	<span class="icon-bar"></span>
+				        	<span class="icon-bar"></span>
+				        	<span class="icon-bar"></span>
+				      	</button>
+				      	<a class="navbar-brand" href="index.html">Fundación Niño y Cancer</a>
+				    </div>
+			    	<!-- Links of the navbar -->
+			    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      		<ul class="nav navbar-nav">
+			        		<li><a href="noticias.html">Noticias</a></li>
+			        		<li class="active"><a href="index.html">Home</a></li>	
+			      		</ul>
+			      		<ul class="nav navbar-nav navbar-right">
+					        <li><a href="nosotros.html">Nosotros</a></li>
+			      		</ul>
+			    	</div>
+			  	</div>
+			</nav>
+		</div>
+
+		<!-- Section2: Banner -->
+		<div class="jumbotron section2">
+			<div class="container">
+				<p>jumbito</p>
+			</div>
+		</div>
+
+	 		
+ 		<!-- Section3: News -->
+ 		<div class="container section3">
+ 			<!-- Section3: News -->
+ 		</div>
+ 		<!-- Section4: Footer -->
+ 		<div class="container section4">
+ 			<!-- Section4: Contact -->
+ 			<!-- Section4: Map -->
+ 			<!-- Section4: Form -->
+ 		</div>
+
  	</body>
 </html>
