--- a/index.html
+++ b/index.html
@@ -51,10 +51,47 @@
 			</nav>
 		</div>
 
-		<!-- Section2: Banner -->
+		<!-- Section2: Banners -->
 		<div class="jumbotron section2">
 			<div class="container">
-				<p>jumbito</p>
+ 				<div id="carouselito" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+					    <li data-target="#carouselito" data-slide-to="0" class="active"></li>
+					    <li data-target="#carouselito" data-slide-to="1"></li>
+					    <li data-target="#carouselito" data-slide-to="2"></li>
+					    <li data-target="#carouselito" data-slide-to="3"></li>
+					    <li data-target="#carouselito" data-slide-to="4"></li>
+					    <li data-target="#carouselito" data-slide-to="5"></li>
+					</ol>
+					<div class="carousel-inner">
+				    	<div class="item active">
+				      		<img class="img-responsive" src="images/becas.gif" alt="First slide">
+				    	</div>
+				    	<div class="item">
+				      		<img class="img-responsive" src="images/futbolito2.gif" alt="Second slide">
+				    	</div>
+				    	<div class="item">
+				      		<img class="img-responsive" src="images/camp2.gif" alt="Third slide">
+				    	</div>
+				    	<div class="item">
+				      		<img class="img-responsive" src="images/montana2.gif" alt="Forth slide">
+				    	</div>
+				    	<div class="item">
+				      		<img class="img-responsive" src="images/navidad2.gif" alt="Fifth slide">
+				    	</div>
+				    	<div class="item">
+				      		<img class="img-responsive" src="images/corona2.gif" alt="Sixth slide">
+				    	</div>
+				  	</div>
+				  	<a class="left carousel-control" href="#carouselito" role="button" data-slide="prev">
+					    <span class="glyphicon glyphicon-chevron-left"></span>
+					    <span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#carouselito" role="button" data-slide="next">
+					    <span class="glyphicon glyphicon-chevron-right"></span>
+					    <span class="sr-only">Next</span>
+					</a>
+				</div>
 			</div>
 		</div>
 
