PruebaHTML-CSS Semana4

--- a/Noticias.html
+++ b/Noticias.html
@@ -100,12 +100,83 @@
  		<div class="container section3">
  			<!-- Section3: News -->
  		</div>
+ 		
  		<!-- Section4: Footer -->
  		<div class="container section4">
  			<!-- Section4: Contact -->
- 			<!-- Section4: Map -->
- 			<!-- Section4: Form -->
- 		</div>
+ 			<div class="thumbnail contact col-md-6 col-sm-6 col-xs-12">
+				<h5>Contacto</h5>
+				<table align="center">
+	 				<tr>
+	 					<td>
+	 						<p>Dirección:</p> 
+	 					</td>
+	 					<td>
+	 						<p>Tupungato 10070 Vitacura, Santiago de Chile</p>
+	 					</td>
+	 				</tr>
+	 				<tr>
+	 					<td>
+	 						<p>Teléfonos:</p> 
+	 					</td>
+	 					<td>
+	 						<p>22170821 - 22170811</p>
+	 					</td>
+	 				</tr>
+	 				<tr>
+	 					<td>
+	 						<p>Fax:</p> 
+	 					</td>
+	 					<td>
+	 						<p>22170820</p>
+	 					</td>
+	 				</tr>
+	 				<tr>
+	 					<td>
+	 						<p>Cta. Cte.:</p> 
+	 					</td>
+	 					<td>
+	 						<p>Banco BCI N° 85999997</p>
+	 					</td>
+	 				</tr>
+	 				<tr>
+	 					<td>
+	 						<p>RUT:</p> 
+	 					</td>
+	 					<td>
+	 						<p>72.169.900-5</p>
+	 					</td>
+	 				</tr>
+	 				<tr>
+	 					<td>
+	 						<p>Email:</p> 
+	 					</td>
+	 					<td>
+	 						<a href="mailto:fundacion@ninoycancer.cl">fundacion@ninoycancer.cl</a>
+	 					</td>
+	 				</tr>
+	 			</table>
+	 			<br>
+			</div>
 
+
+ 			<!-- Section4: Map -->
+ 			<div class="container map col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+	 			<div class="embed-responsive embed-responsive-21by9">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060832914!2d-70.53934504974613!3d-33.383874501389215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530682819895" width="300" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+			</div>
+ 			<!-- Section4: Form -->
+ 			<div class="thumbnail contact col-md-12 col-sm-12 col-xs-12">
+				<h5>Suscribete</h5>
+				<table align="left">
+	 				<td>
+	 					<p>Reciba noticias y novedades al instante:</p>
+	 					<input type="text" name="lastname" value="Ingresa tu email...">
+	 					<input type="submit" value="Enviar">
+	 				</td>
+	 			</table>
+			</div>
+ 		</div>
  	</body>
 </html>
