--- a/Nosotros.html
+++ b/Nosotros.html
@@ -100,7 +100,45 @@
  		<!-- Section3: Mision & History -->
  		<div class="container section3">
  			<!-- Section3: Mision -->
+ 			<div class="mision col-md-6 col-sm-6 col-xs-12">
+ 				<h3>Misión y Objetivos</h3>
+ 				<p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+ 				<p>La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+ 				<p>Sus objetivos principales son:</p>
+ 				<ul>
+					<li>Apoyar el tratamiento  de la enfermedad</li>
+					<li>Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento</li>
+					<li>Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios)</li>
+					<li>Damos apoyo social y solidario a la familia del niño (Departamentos de Acogida, almuerzo para padres de niños hospitalizados, Cenas de Navidad, etc.)</li>
+				</ul>
+ 			</div>
+
  			<!-- Section3: History -->
+ 			<div class="history col-md-6 col-sm-6 col-xs-12">
+ 				<h3>Breve historia</h3>
+ 				<p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+ 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+ 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+ 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+ 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+ 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+ 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ 				<img src="http://www.ninoycancer.cl/images2/Pict0005.jpg">
+ 				<img src="http://www.ninoycancer.cl/images2/Pict0004.jpg">
+ 			</div>
+
+ 			<!-- Section3: Activities -->
+ 			<div class="history col-md-12 col-sm-12 col-xs-12">
+ 				<h3>Actividades Principales</h3>
+ 				<p>La fundación está convencida que para derrotar el cáncer no sólo hay que preocuparse de curar el cuerpo de los pacientes. El espíritu también se ve afectado y para salir adelante es esencial querer curarse. Por esta razón, son muy importantes los programas recreativos, los cuales ayudan a superar los sufrimientos y mantener vivo el deseo de curarse.</p>
+ 				<ul>
+					<li><a href="http://www.ninoycancer.cl/alegria2014.htm">Montaña de la Alegria</a></li>
+					<li><a href="http://www.ninoycancer.cl/futbolito2015.htm">Torneo de Futbolito y Porristas</a></li>
+					<li><a href="http://www.ninoycancer.cl/uruguay.htm">Campamento por la Vida</a></li>
+					<li><a href="http://www.ninoycancer.cl/cenasnav2013.htm">Cenas de Navidad</a></li>
+					<li><a href="http://www.ninoycancer.cl/coronas.htm">Coronas de Caridad</a></li>
+				</ul>
+ 			</div>
  		</div>
  		
  		<!-- Section4: Footer -->
