--- a/Noticias.html
+++ b/Noticias.html
@@ -53,51 +53,49 @@
 
 		<!-- Section2: Banners -->
 		<div class="jumbotron section2">
-			<div class="container">
- 				<div id="carouselito" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-					    <li data-target="#carouselito" data-slide-to="0" class="active"></li>
-					    <li data-target="#carouselito" data-slide-to="1"></li>
-					    <li data-target="#carouselito" data-slide-to="2"></li>
-					    <li data-target="#carouselito" data-slide-to="3"></li>
-					    <li data-target="#carouselito" data-slide-to="4"></li>
-					    <li data-target="#carouselito" data-slide-to="5"></li>
-					</ol>
-					<div class="carousel-inner">
-				    	<div class="item active">
-				      		<img class="img-responsive" src="images/becas.gif" alt="First slide">
-				    	</div>
-				    	<div class="item">
-				      		<img class="img-responsive" src="images/futbolito2.gif" alt="Second slide">
-				    	</div>
-				    	<div class="item">
-				      		<img class="img-responsive" src="images/camp2.gif" alt="Third slide">
-				    	</div>
-				    	<div class="item">
-				      		<img class="img-responsive" src="images/montana2.gif" alt="Forth slide">
-				    	</div>
-				    	<div class="item">
-				      		<img class="img-responsive" src="images/navidad2.gif" alt="Fifth slide">
-				    	</div>
-				    	<div class="item">
-				      		<img class="img-responsive" src="images/corona2.gif" alt="Sixth slide">
-				    	</div>
-				  	</div>
-				  	<a class="left carousel-control" href="#carouselito" role="button" data-slide="prev">
-					    <span class="glyphicon glyphicon-chevron-left"></span>
-					    <span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#carouselito" role="button" data-slide="next">
-					    <span class="glyphicon glyphicon-chevron-right"></span>
-					    <span class="sr-only">Next</span>
-					</a>
-				</div>
+			<div id="carouselito" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+				    <li data-target="#carouselito" data-slide-to="0" class="active"></li>
+				    <li data-target="#carouselito" data-slide-to="1"></li>
+				    <li data-target="#carouselito" data-slide-to="2"></li>
+				    <li data-target="#carouselito" data-slide-to="3"></li>
+				    <li data-target="#carouselito" data-slide-to="4"></li>
+				    <li data-target="#carouselito" data-slide-to="5"></li>
+				</ol>
+				<div class="carousel-inner">
+			    	<div class="item active">
+			      		<img class="img-responsive" src="images/becas.gif" alt="First slide">
+			    	</div>
+			    	<div class="item">
+			      		<img class="img-responsive" src="images/futbolito2.gif" alt="Second slide">
+			    	</div>
+			    	<div class="item">
+			      		<img class="img-responsive" src="images/camp2.gif" alt="Third slide">
+			    	</div>
+			    	<div class="item">
+			      		<img class="img-responsive" src="images/montana2.gif" alt="Forth slide">
+			    	</div>
+			    	<div class="item">
+			      		<img class="img-responsive" src="images/navidad2.gif" alt="Fifth slide">
+			    	</div>
+			    	<div class="item">
+			      		<img class="img-responsive" src="images/corona2.gif" alt="Sixth slide">
+			    	</div>
+			  	</div>
+			  	<a class="left carousel-control" href="#carouselito" role="button" data-slide="prev">
+				    <span class="glyphicon glyphicon-chevron-left"></span>
+				    <span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#carouselito" role="button" data-slide="next">
+				    <span class="glyphicon glyphicon-chevron-right"></span>
+				    <span class="sr-only">Next</span>
+				</a>
 			</div>
 		</div>
 
 	 		
  		<!-- Section3: News -->
- 		<div class="container section3">
+ 		<div class="container section3_not">
  			<!-- Section3: Blog -->
  			<div class="news_blog col-md-9 col-sm-10 col-xs-12">
  				<!-- News 1 -->
@@ -186,8 +184,9 @@
  		</div>
  		
  		<!-- Section4: Footer -->
- 		<div class="container section4">
+ 		<div class="jumbotron section4">
  			<!-- Section4: Contact -->
+ 			<div class="container">
  			<div class="thumbnail contact col-md-6 col-sm-6 col-xs-12">
 				<h5>Contacto</h5>
 				<table align="center">
@@ -247,7 +246,7 @@
  			<!-- Section4: Map -->
  			<div class="container map col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
 	 			<div class="embed-responsive embed-responsive-21by9">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060832914!2d-70.53934504974613!3d-33.383874501389215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530682819895" width="300" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060832914!2d-70.53934504974613!3d-33.383874501389215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530682819895" width="350" height="165" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div>
  			<!-- Section4: Form -->
@@ -260,6 +259,7 @@
 	 					<input type="submit" value="Enviar">
 	 				</td>
 	 			</table>
+			</div>
 			</div>
  		</div>
  	</body>
