PruebaHTML-CSS Semana4

--- a/Noticias.html
+++ b/Noticias.html
@@ -97,7 +97,7 @@
  		<!-- Section3: News -->
  		<div class="container section3_not">
  			<!-- Section3: Blog -->
- 			<div class="news_blog col-md-9 col-sm-10 col-xs-12">
+ 			<div class="news_blog col-md-9 col-sm-9 col-xs-12">
  				<!-- News 1 -->
  				<div class="thumbnail news">
  					<a href="http://www.ninoycancer.cl/becas2018.htm">
@@ -147,7 +147,7 @@
  			</div>
 
  			<!-- Section3: Right Column -->
- 			<div class="news col-md-3 col-sm-2">
+ 			<div class="news col-md-3 col-sm-3 col-xs-12">
  				<h4>Recientes</h4>
  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
  				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
