--- a/Nosotros.html
+++ b/Nosotros.html
@@ -41,10 +41,10 @@
 			    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      		<ul class="nav navbar-nav">
 			        		<li><a href="noticias.html">Noticias</a></li>
-			        		<li class="active"><a href="index.html">Home</a></li>	
+			        		<li><a href="index.html">Home</a></li>	
 			      		</ul>
 			      		<ul class="nav navbar-nav navbar-right">
-					        <li><a href="nosotros.html">Nosotros</a></li>
+					        <li class="active"><a href="nosotros.html">Nosotros</a></li>
 			      		</ul>
 			    	</div>
 			  	</div>
