--- a/Noticias.html
+++ b/Noticias.html
@@ -40,8 +40,8 @@
 			    	<!-- Links of the navbar -->
 			    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      		<ul class="nav navbar-nav">
-			        		<li><a href="noticias.html">Noticias</a></li>
-			        		<li class="active"><a href="index.html">Home</a></li>	
+			        		<li class="active"><a href="noticias.html">Noticias</a></li>
+			        		<li><a href="index.html">Home</a></li>	
 			      		</ul>
 			      		<ul class="nav navbar-nav navbar-right">
 					        <li><a href="nosotros.html">Nosotros</a></li>
