PruebaHTML-CSS Semana4

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -142,7 +142,7 @@
  		<div class="jumbotron section4">
  			<!-- Section4: Contact -->
  			<div class="container">
- 			<div class="thumbnail contact col-md-6 col-sm-6 col-xs-12">
+ 			<div class="thumbnail contact col-md-6 col-sm-12 col-xs-12">
 				<h5>Contacto</h5>
 				<table align="center">
 	 				<tr>
@@ -199,9 +199,9 @@
 
 
  			<!-- Section4: Map -->
- 			<div class="container map col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
-	 			<div class="embed-responsive embed-responsive-21by9">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060832914!2d-70.53934504974613!3d-33.383874501389215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530682819895" width="350" height="165" frameborder="0" style="border:0" allowfullscreen></iframe>
+ 			<div class="container col-md-4 col-sm-12 col-xs-12 col-md-offset-1">
+	 			<div class="map embed-responsive embed-responsive-21by9">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060832914!2d-70.53934504974613!3d-33.383874501389215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530682819895" width="100%" height="50%" frameborder="0"  allowfullscreen></iframe>
 				</div>
 			</div>
  			<!-- Section4: Form -->
